@@ -2,10 +2,19 @@ import bg1 from "./images/bg_1.jpg";
 import bg2 from "./images/bg_2.jpg";
 import bg3 from "./images/bg_3.jpg";
 import "./App.css";
+import Nav from "./Nav";
+import { useLocation } from "react-router-dom";
 
-export default function Home() {
+const Home = (props) => {
+  console.log(props);
+  const location = useLocation().state;
+  console.log(location);
+  const user = location.user;
+
+  // console.log(user);
   return (
     <div className="home">
+      <Nav state={{ user }} />
       <div className="slide-images">
         <div className="img-container">
           <img src={bg1} />
@@ -19,4 +28,6 @@ export default function Home() {
       </div>
     </div>
   );
-}
+};
+
+export default Home;
