@@ -7,12 +7,16 @@ import {
   Link,
   useLocation,
 } from "react-router-dom";
+import Nav from "./Nav";
 import SessionLink from "./SessionLink";
 
 const ListSessions = (props) => {
   const location = useLocation().state;
-
   console.log(location);
+  const user = location;
+  const userName = location._firstName;
+
+  // console.log(user);
   const [sessions, setSessions] = useState([]);
   useEffect(() => {
     getSessions();
@@ -31,35 +35,41 @@ const ListSessions = (props) => {
   }
 
   return (
-    <div className="sessionDataContainer">
-      <p>Sessions</p>
+    <div>
+      <Nav state={{ user }} />
+      <div className="sessionDataContainer">
+        <p>Viewing Sessions</p>
 
-      <table className="sessionDataTable">
-        <thead>
-          <tr>
-            <th>Session Title</th>
-            <th>Room</th>
-            <th>Start Time</th>
-            <th>End Time</th>
-            <th>Moderator</th>
-          </tr>
-        </thead>
-        <tbody>
-          {sessions.map((session, key) => (
-            <tr key={session.session_id}>
-              <td>
-                <Link to="/Session" state={{ session_id: session.session_id }}>
-                  {session.title}
-                </Link>
-              </td>
-              <td>{session.room}</td>
-              <td>{session.startTime}</td>
-              <td>{session.endTime}</td>
-              <td>{session.modName}</td>
+        <table className="sessionDataTable">
+          <thead>
+            <tr>
+              <th>Session Title</th>
+              <th>Room</th>
+              <th>Start Time</th>
+              <th>End Time</th>
+              <th>Moderator</th>
             </tr>
-          ))}
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+            {sessions.map((session, key) => (
+              <tr key={session.session_id}>
+                <td>
+                  <Link
+                    to="/Session"
+                    state={{ session_id: session.session_id }}
+                  >
+                    {session.title}
+                  </Link>
+                </td>
+                <td>{session.room}</td>
+                <td>{session.startTime}</td>
+                <td>{session.endTime}</td>
+                <td>{session.modName}</td>
+              </tr>
+            ))}
+          </tbody>
+        </table>
+      </div>
     </div>
   );
 };
