@@ -1,8 +1,13 @@
 // import { BrowserRouter, Routes, Route, Link } from "react-router-dom";
 import { useState, useEffect } from "react";
 import axios from "axios";
-import { Link } from "react-router-dom";
+import { Link, useLocation } from "react-router-dom";
+import Nav from "./Nav";
+
 const Users = (props) => {
+  const location = useLocation().state;
+  const user = location;
+  console.log(location);
   const [users, setUsers] = useState([]);
   useEffect(() => {
     getUsers();
@@ -19,35 +24,38 @@ const Users = (props) => {
   }
 
   return (
-    <div className="users_data">
-      <div>Admin page: User List</div>
-      <div>
-        <table className="sessionDataTable">
-          <thead>
-            <tr>
-              <th>Full Name</th>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Organization</th>
-              <th>Sessions</th>
-            </tr>
-          </thead>
-          <tbody>
-            {users.map((user, key) => (
-              <tr key={user.user_id}>
-                <td>
-                  <Link to="/User" state={{ user_id: user.user_id }}>
-                    {user.fullName}
-                  </Link>
-                </td>
-                <td>{user.firstName}</td>
-                <td>{user.lastName}</td>
-                <td>{user.organization}</td>
-                <td>Function WIP</td>
+    <div>
+      <Nav state={{ user: user }} />
+      <div className="users_data">
+        <div>Admin page: User List</div>
+        <div>
+          <table className="sessionDataTable">
+            <thead>
+              <tr>
+                <th>Full Name</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Organization</th>
+                <th>Sessions</th>
               </tr>
-            ))}
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              {users.map((user, key) => (
+                <tr key={user.user_id}>
+                  <td>
+                    <Link to="/User" state={{ user_id: user.user_id }}>
+                      {user.fullName}
+                    </Link>
+                  </td>
+                  <td>{user.firstName}</td>
+                  <td>{user.lastName}</td>
+                  <td>{user.organization}</td>
+                  <td>Function WIP</td>
+                </tr>
+              ))}
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   );
