@@ -2,6 +2,7 @@
 # [Login] GET login API correctly fetching data and passing data through to Homepage.
 # Authentication not working properly
 # NavBar elements Hidden until user logs in 
+# State maintains user info after login on [Session] then [Home] but loses state after that.
 
 # 0.021
 # [Users] Fetching and displaying correct data from db. Displays data for all users.
